# MultimodeNonlinearOptics

./: CMakeLists.txt  Cascade.hpp  Chi2PDC.cpp  Chi2PDCII.cpp  Chi2SFG.cpp  Chi2SFGII.cpp  Chi2SFGPDC.cpp  Chi2SHG.cpp  Chi3.cpp  Chi3Fiber.py  NonlinearHelper.py  NonlinearMedium.cpp  NonlinearMedium.hpp  NonlinearMedium.py  README.md  _NonlinearMedium.cpp  _NonlinearMedium.hpp  buildup.py  classical.py  decompositions.py  greenFunction.py  multimode.py  nlmModulePy.cpp  poling.py  simParams.py
cmake_modules/: FindFFTW.cmake
materials/: BBO.py  KTP.py  LBO.py  MgOLN.py  README.md  __init__.py  nlMaterial.py
solvers/: Chi2AFC.cpp  Chi2ASHG.cpp  Chi2DSFG.cpp  Chi2PDC.cpp  Chi2PDCII.cpp  Chi2SFG.cpp  Chi2SFGII.cpp  Chi2SFGOPA.cpp  Chi2SFGPDC.cpp  Chi2SFGRandom.cpp  Chi2SFGXPM.cpp  Chi2SHG.cpp  Chi2SHGOPA.cpp  Chi2SHGXPM.cpp  Chi3.cpp  Chi3GNLSE.cpp  Chi3THG.cpp  README.md  RegisteredSolvers.hpp
src/: Cascade.cpp  Cascade.hpp  CustomEigenFFT.h  README.md  _FullyNonlinearMedium.cpp  _FullyNonlinearMedium.hpp  _NonlinearMedium.cpp  _NonlinearMedium.hpp  nlmModulePy.cpp
tests/: 01 - Dispersion.py  02 - Third Order Dispersion.py  03 - Nonlinear Propagation -- Solitons.py  04 - Green's Function.py  05 - Hosaka.py  06 - Lvovsky.py  07 - Wasilewski.py  08 - Shirasaki.py  09 - Doerr.py  1 - Dispersion.py  10 - Doerr.py  10 - Poling Domains.py  11 - Poling Domains.py  11 - Suchowski.py  2 - Third Order Dispersion.py  3 - Nonlinear Propagation -- Solitons.py  4 - Nonlinear Chi(3) Signal Propagation.py  5 - Green's Function.py  6 - Hosaka.py  7 - Lvovsky.py  8 - Wasilewski.py  9 - Shirasaki.py  README.md
